last changes and tests
