# personal-finance-api/routes/categories.js
@@ -4,11 +4,22 @@ const validation = require('../middleware/validate');
 const categoriesController = require('../controllers/categories');
 const { handleErrors } = require('../middleware/errorHandler');
 
+// CRUD routes for categories
 router.get('/', handleErrors(categoriesController.getAllCategories));
 router.get('/:id', handleErrors(categoriesController.getSingleCategory));
-router.post('/', validation.saveCategory, handleErrors(categoriesController.createCategory));
-router.put('/:id', validation.saveCategory, handleErrors(categoriesController.updateCategory));
+
+router.post('/', validation.saveCategory, (req, res) => {
+    // req.body = { name: "", description: "", color: "" }
+    categoriesController.createCategory(req, res);
+});
+
+router.put('/:id', validation.saveCategory, (req, res) => {
+    // req.body = { name: "", description: "", color: "" }
+    categoriesController.updateCategory(req, res);
+});
 router.delete('/:id', handleErrors(categoriesController.deleteCategory));
 
 module.exports = router;
+
+
 
